Bar chart formatting

--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
     </div>
     <div class="chart-wrapper" id="bar-chart-container">
       <h3>Player Ratings Comparison</h3>
-      <div id="tooltip" style="position: absolute; display: none; background: lightgray; border: 1px solid gray; padding: 5px; border-radius: 4px; pointer-events: none;"></div>
+      <div id="tooltip"></div>
       <svg id="barChart" width="600" height="400"></svg>
     </div>
   </div>
